--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/my-react-app/src/svgs/dragon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campus Events</title>
   </head>
